--- a/static/global.css
+++ b/static/global.css
@@ -1,36 +1,352 @@
+@font-face {
+  font-family: 'Self Modern';
+  src: url('subset-SelfModern-Regular.woff') format('woff');
+  src: url('subset-SelfModern-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Self Modern';
+  src: url('subset-SelfModern-Italic.woff') format('woff');
+  src: url('subset-SelfModern-Italic.woff2') format('woff2');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
+html {
+  text-size-adjust: 100%;
+  -webkit-tap-highlight-color: transparent;
+  background-color: white;
+  color: black;
+  scroll-behavior: smooth;
+}
 body {
-	margin: 0;
-	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	font-size: 14px;
-	line-height: 1.5;
-	color: #333;
+  font-family: 'Self Modern', serif;
+  font-size: 24px;
+  line-height: 1.2;
+  letter-spacing: -0.007em;
+  /* word-spacing: -0.02em; */
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+::selection {
+  color: #ffffff;
+  text-shadow: none;
+  background: #000000;
+}
+a,
+a:active,
+a:hover {
+  color: black;
+  text-decoration: none;
+  /* border-bottom: solid 1px black; */
+}
+p a {
+  text-decoration: underline;
+}
+p a:hover,
+.article:hover {
+  text-decoration: underline;
+  color: rgb(255, 0, 255);
+}
+.bc {
+  background-color: rgb(255, 0, 255);
+}
+/*
+.marquee {
+  background-color: rgb(255, 0, 255);
+  z-index: -10;
+  position: relative;
+  overflow: hidden;
+  --offset: 5vw;
+  --move-initial: calc(100% + var(--offset));
+  --move-final: calc(-100% + var(--offset));
+}
+.marquee__inner {
+  width: fit-content;
+  display: flex;
+  position: relative;
+  transform: translate3d(var(--move-initial), 0, 0);
+  animation: marquee 7s linear infinite;
+  animation-play-state: paused;
+}
+ .marquee span {
+}
+.marquee a {
+  text-decoration: none;
+}
+@keyframes marquee {
+  0% {
+    transform: translate3d(var(--move-initial), 0, 0);
+  }
+
+  100% {
+    transform: translate3d(var(--move-final), 0, 0);
+  }
+} */
+
+.bg-white {
+  background-color: white;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	margin: 0 0 0.5em 0;
-	font-weight: 400;
-	line-height: 1.2;
+button,
+input {
+  font: inherit;
+  color: inherit;
+  letter-spacing: inherit;
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  background-color: transparent;
+}
+.btn {
+  width: auto;
+  cursor: pointer;
+  border: 1px solid;
+  padding: 0.3em 1em 0.4em;
+  border-radius: 1.1em;
+  background-color: #000000;
+  border-color: #000000;
+  color: #ffffff;
+  margin: 0.25em;
+}
+.btn:hover {
+  background-color: transparent;
+  color: black;
+}
+i,
+em {
+  font-style: italic;
+}
+.pointer {
+  cursor: pointer;
+}
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain !important;
+}
+.img {
+  width: 50%;
+}
+h1,
+h2,
+h3,
+h4 {
+  font-weight: normal;
+}
+h1,
+h2,
+h3 {
+  font-size: 1em;
+}
+h4, .sm {
+  font-size: 0.6em;
+}
+.xl {
+  font-size: 4em;
+}
+/* p {
+  margin-block-end: 1em;
+  margin-block-start: 1em;
+}
+p,
+ul {
+  padding: 0;
+  list-style: none;
+  font-size: 0.65em;
+  text-align: center;
+} */
+
+/* nav {
+}
+nav a {
+  padding-left: 0.25em;
+  padding-right: 0.25em;
+} */
+
+.mb5 {
+  margin-bottom: 5em;
+}
+article {
+  border-top: solid black 1px;
+}
+article header {
+  padding: 0.25em 1em 0.25em 1em;
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+}
+article header:hover,
+article header:hover a {
+  background-color: #eeee;
+}
+.article {
+  /* margin-block-end: 1em; */
+  width: 50%;
 }
 
-h1 {
-	font-size: 2em;
+/* .article {
+  background-color: black;
+  color: white;
+  width: 300px;
+  max-width: 100%;
+  margin: 0.5em;
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: center;
+}
+.article:hover {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+} */
+.relative {
+  position: relative;
+}
+.fixed {
+  position: fixed;
+}
+.sticky {
+  position: sticky;
+}
+.absolute {
+  position: absolute;
+}
+.l0 {
+  left: 0;
+}
+.t0 {
+  top: 0;
+}
+.r0 {
+  right: 0;
+}
+.b0 {
+  bottom: 0;
+}
+.b2 {
+  bottom: 2em;
+}
+/* .mh25 {
+  min-height: 25vh;
+} */
+/* .mh100 {
+  min-height: 100vh;
+} */
+.h-auto-100vh {
+  height: auto;
+}
+.h100 {
+  height: 100vh;
+}
+.h50 {
+  height: 50vh;
+  width: auto;
+}
+.w50 {
+  width: 40%;
+}
+.w100 {
+  width: 100%;
+}
+.z-1 {
+  z-index: -1;
+}
+.z2 {
+  z-index: 2;
+}
+.z10 {
+  z-index: 10;
+}
+.z100 {
+  z-index: 100;
+}
+.z200 {
+  z-index: 200;
+}
+.center {
+  text-align: center;
+}
+.m {
+  margin: 1em;
+}
+.p {
+  padding: 1em;
+}
+.p0111 {
+  padding: 0.25em 1em 0.25em 1em;
+}
+.flex2 {
+  flex: 2;
+}
+.flex1 {
+  flex: 1;
+}
+.flex0 {
+  flex: 0;
+}
+.flex {
+  display: flex;
+}
+.wrap {
+  flex-wrap: wrap;
+}
+.column {
+  flex-direction: column;
+}
+.jc-center {
+  justify-content: center;
+}
+.jc-sb {
+  justify-content: space-between;
+}
+.jc-sa {
+  justify-content: space-around;
+}
+.flexend {
+  justify-content: flex-end;
+}
+.ai-center {
+  align-items: center;
+}
+/* .hyphens {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+} */
+@media only screen and (max-width: 960px) {
+  footer h2 {
+    display: none;
+  }
 }
 
-a {
-	color: inherit;
+@media only screen and (max-width: 800px) {
+  body {
+    font-size: 18px;
+    /* line-height: 1.3; */
+  }
+  .xl {
+    font-size: 3em;
+  }
+  .img {
+    width: 100%;
+  }
+  /* .hyphens {
+    hyphens: none;
+  } */
 }
-
-code {
-	font-family: menlo, inconsolata, monospace;
-	font-size: calc(1em - 2px);
-	color: #555;
-	background-color: #f0f0f0;
-	padding: 0.2em 0.4em;
-	border-radius: 2px;
-}
-
-@media (min-width: 400px) {
-	body {
-		font-size: 16px;
-	}
+@media only screen and (max-width: 600px) {
+  .issue {
+    flex-direction: column;
+  }
 }
