--- a/static/global.css
+++ b/static/global.css
@@ -54,6 +54,10 @@ p a:hover,
   text-decoration: underline;
   color: rgb(255, 0, 255);
 }
+p {
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+}
 .bc {
   background-color: rgb(255, 0, 255);
 }
