--- a/static/global.css
+++ b/static/global.css
@@ -214,6 +214,9 @@ article header:hover a {
   padding: 1em;
 }
 .p0111 {
+  padding: 0 1em 1em 1em;
+}
+.p251251 {
   padding: 0.25em 1em 0.25em 1em;
 }
 .flex50 {
